[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/elf.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/animations/entrance.res" type="SpriteFrames" id=2]
[ext_resource path="res://assets/animations/red2.res" type="SpriteFrames" id=3]
[ext_resource path="res://screens/enterance.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/small_pixel_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/spritesheets/textbox_9patch.png" type="Texture" id=6]
[ext_resource path="res://assets/curtain.png" type="Texture" id=7]
[ext_resource path="res://assets/animations/snow.res" type="SpriteFrames" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 3 )

[sub_resource type="Animation" id=3]
resource_name = "down"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("curtain_animation/curtain:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -160, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}

[node name="enterance" type="Node2D"]
script = ExtResource( 4 )

[node name="bg" type="AnimatedSprite" parent="."]
position = Vector2( 64, 64 )
frames = ExtResource( 2 )
animation = "closed"
playing = true

[node name="elf" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 117 )

[node name="red2" type="StaticBody2D" parent="."]
position = Vector2( 34, 113 )

[node name="red" type="AnimatedSprite" parent="red2"]
position = Vector2( 43, -14 )
frames = ExtResource( 3 )
animation = "idle"
frame = 3
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="red2"]
visible = false
polygon = PoolVector2Array( 37, -7, 39, -10, 48, -10, 50, -7, 48, -6, 39, -6 )

[node name="trigger" type="Area2D" parent="red2"]
collision_layer = 32
collision_mask = 32

[node name="colission" type="CollisionShape2D" parent="red2/trigger"]
position = Vector2( 43, -8 )
shape = SubResource( 1 )

[node name="snow" type="AnimatedSprite" parent="."]
frames = ExtResource( 8 )
animation = "idle"
frame = 3
playing = true
centered = false

[node name="border" type="StaticBody2D" parent="."]

[node name="collision" type="CollisionPolygon2D" parent="border"]
visible = false
build_mode = 1
polygon = PoolVector2Array( 0, 92, 30, 73, 57, 67, 73, 65, 99, 71, 106, 94, 128, 111, 128, 128, 0, 128 )

[node name="textbox" type="NinePatchRect" parent="."]
visible = false
margin_right = 128.0
margin_bottom = 64.0
texture = ExtResource( 6 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="textbox"]
margin_left = 11.0
margin_top = 11.0
margin_right = 117.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 5 )
text = "well this is embarrasing...
there apears to be an error in the code
many apologies user"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="trigger" type="Area2D" parent="."]
position = Vector2( 66, 69 )
collision_layer = 0
collision_mask = 32

[node name="collision" type="CollisionShape2D" parent="trigger"]
shape = SubResource( 2 )

[node name="curtain_animation" type="AnimationPlayer" parent="."]
anims/down = SubResource( 3 )

[node name="curtain" type="Sprite" parent="curtain_animation"]
position = Vector2( 0, -160 )
texture = ExtResource( 7 )
centered = false
[connection signal="animation_finished" from="bg" to="." method="_on_bg_animation_finished"]
[connection signal="body_entered" from="red2/trigger" to="." method="_elf_trigger"]
[connection signal="body_entered" from="trigger" to="." method="_on_trigger_body_entered"]
[connection signal="animation_finished" from="curtain_animation" to="." method="_on_curtain_animation_animation_finished"]
